--- a/terminal/CSS/global.css
+++ b/terminal/CSS/global.css
@@ -1,72 +1,203 @@
-*{
-  padding: 0;
-  margin: 0;  
-  box-sizing: border-box;
-
-}
-#cabecera{
-   display: grid;
-   grid-template-columns: 1fr;
-   grid-template-rows: auto 1fr;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
   
-}
-#menu{
-    display: grid;
-    width: auto;
-    grid-template-columns: auto 1fr auto auto auto;
-    padding: 1% 1% 1% 1%;
-    background-color: rgb(0 0 0 / 50%);
+  html {
+    overflow-x: hidden;
+  }
+  
+  main {
+    width: 100vw;
+  }
+  
+  header nav {
+    position: fixed;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    border-bottom: solid 3px white;
     align-items: center;
-    border-bottom: 1.5px solid rgba(255, 255, 255, 0.5);
-    height: auto;
-
-}
-#logo{
-    width: auto;
-    height: auto;
-    justify-content: center;
-    align-items: center;
-    flex-shrink: 0;
-}
-
-#longin{
-    width: auto;
-    height: auto;
-    flex-direction: column;
-    justify-content: center;
-    flex-shrink: 0;  
-
-    color: rgba(255, 255, 255, 0.884);
-
-    text-align: center;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 390;
-    line-height: 45px; /* 225% */
-    }
-#esp{
-    width: auto;
-    height: auto;
-    flex-direction: column;
-    justify-content: center;
-    flex-shrink: 0;  
-
-    color: rgba(255, 255, 255, 0.803);
-
-    text-align: center;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 390;
-    line-height: 45px; /* 225% */
-}
-#consulta {
-    padding: 5px 0;
+    color: white;
+    background-color: #0005;
+    padding: 15px;
+  }
+  
+  header nav a img {
+    width: 150px;
+  }
+  
+  #mobile {
+    height: 50px;
+    width: 50px;
     display: none;
+  }
+  
+  .nav-links {
+    display: flex;
+    gap: 64px;
+    margin-right: 30px;
+  }
+  
+  .login,
+  .menu {
+    display: flex;
+    gap: 16px;
     align-items: center;
-    justify-content: center;
-    width: 45px;    
-    height: 30px;
-    flex-shrink: 0;
+  }
+  
+  .menu img {
+    width: 30px;
+  }
+  
+  .bar {
+    width: 3px;
+    background-color: white;
+    height: 16px;
+  }
+  
+  .large {
+    height: 32px;
+  }
+  
+  .active {
+    color: rgb(198, 198, 198);
+  }
+  
+  main img {
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+    object-position: top -300px right 0;
+    overflow-x: hidden;
+  }
+  
+  .Luxury, .Realstate {
+  display: flex;
+  width: 490px;
+  height: fit-content;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
 }
+
+  .Luxury {
+  color: #B4B7B7;
+
+  font-family: PF Regal Display Pro;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 45px; /* 112.5% */
+}
+.Realstate {
+  color: #FFF;
+  font-family: PF Regal Display Pro;
+  font-size: 80px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 45px; /* 56.25% */
+}
+
+  .primer_boton{
+    width: fit-content;
+  height: fit-content;
+  transform: rotate(-90deg);
+  flex-shrink: 0;
+  border-radius: 100px;
+  border: 1px solid black;}
+
+
+  #buscar {
+  
+    flex-shrink: 0;
+    width: fit-content;
+    font-size: 18px;
+    padding: 7px 0 7px 20px;
+    border: 1px solid white;
+    border-radius: 100px;
+    background: none;
+    grid-column: 2/3;
+    
+
+  }
+
+  input#buscar::placeholder{
+  color: white;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;  
+  background-image: url(../IMG/Group\ 241.png);  
+  background-repeat: no-repeat;
+    background-position: right;
+  }
+
+  #presentacion {
+    background-image: url(../IMG/Group\ 254.png);
+    
+
+  }
+
+   .news {
+    background-color: rgb(39, 39, 39);
+    display: flex;
+    gap: 16px;
+    padding: 16px 50px;
+    transform: translate(0, -50%);
+  }
+  
+  .news span {
+    color: orange;
+    font-size: 20px;
+  }
+  
+  .news p {
+    color: white;
+    font-size: 32px;
+  }
+  
+  .footer-form {
+    display: grid;
+    gap: 8px;
+  }
+  
+  .footer-form input {
+    background-color: transparent;
+    border: solid 2px grey;
+    border-radius: 20px;
+    padding: 6px 16px;
+    width: 100%;
+  }
+  
+  .footer-form button {
+    background-color: transparent;
+    border: solid 2px orange;
+    border-radius: 20px;
+    padding: 6px 32px;
+    width: fit-content;
+    color: orange;
+    justify-self: end;
+  }
+  
+  .info {
+    display: grid;
+    gap: 16px;
+    color: white;
+  }
+  
+  .footer-bar {
+    width: 100%;
+    height: 3px;
+    background-color: white;
+  }
+  
+  .copyright {
+    text-align: center;
+    margin-bottom: 16px;
+  }
+  
+  .footer-text {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+  }
+  
+ 
