--- a/terminal/CSS/global.css
+++ b/terminal/CSS/global.css
@@ -63,48 +63,41 @@
   
   .active {
     color: rgb(198, 198, 198);
-  }´
+  }
 
-
-  .Luxury {
-    display: flex;
-    width: 490px;
-    height: 47px;
-    flex-direction: column;
-    justify-content: center;
-    flex-shrink: 0;
+  .luxury {
     color: #B4B7B7;
-    font-family: PF Regal Display Pro;
-    font-size: 40px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 45px; /* 112.5% */}
 
-.Realstate {
-  font-family: 'PF Regal Display Pro';
-  font-style: normal;
-   font-weight: 500;
-   font-size: 60px;
-   color: #FFFFFF;
-   margin-top: 30%;
-   margin-left: 90px;
-
+font-family: PF Regal Display Pro;
+font-size: 40px;
+font-style: normal;
+font-weight: 400px;
+line-height: 45px;
+margin-top: 300px;
+margin-left: 90px;
 
 }
+  #realestate{
+  
+    font-family: 'PF Regal Display Pro';
+    font-style: normal;
+   font-weight: 500px;
+   font-size: 60px;
+   color: #FFFFFF;
+   margin-left: 90px;
+  }
 
-  .primer_boton{
-    
+  #primer_boton {
+   display: flex; 
   color:white;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;  
-  width: 500px;
-  height: 800px;
-  transform: rotate(-90deg);
-  flex-shrink: 0;
+  width: fit-content;
+  height: fit-content;
   border-radius: 100px;
   border: 1px solid white;
-  margin-top: 60%;
+  padding: 10px;
+  margin-bottom: 90%;
   margin-left: 100px;
-
 }
   
 
@@ -118,8 +111,8 @@
     border: 1px solid white;
     border-radius: 100px;
     background: none;
-    margin-top: 25px;
-    margin-left: 50%;
+    margin-top: 10%;
+    margin-left: 75%;
     
   }
 
@@ -128,9 +121,7 @@
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;  
   background-image: url(../IMG/lupa.png);  
   background-repeat: no-repeat;
-  background-position: right;
- 
-  
+  background-position: right;  
   }
 
   .presentacion {
@@ -140,7 +131,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 900px;
+    height: 980px;
   }
 
 #contenedor {
@@ -360,11 +351,50 @@ line-height: 45px; /* 225% */
   }
   div#galeriafotos3 {
     display: grid;
-    width: 200%;
-    grid-template-columns: repeat(4,1fr);
-    grid-template-rows: repeat(4,1fr);
-    gap: 10px;
-    max-width: 1820px;
-    margin: 20px auto
-  ;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    margin: 0 5% 0 5%;
+    column-gap: 5px;
+    row-gap: 25px;
+    overflow: hidden;
+    object-fit: cover;
+
+
   }
+  .galeria3 {
+    vertical-align: middle;
+    border-style: none;
+    height: 300px;
+    width: 300px;
+    text-decoration: none;
+    transition: all 0.5s ease;
+    overflow-clip-margin: content-box;
+    overflow: clip;
+  }
+.titulog1, .subtitulo2{
+  font-family: 'PF Regal Display Pro';
+    font-style: normal;
+    font-weight: 400px;
+    font-size: 18px;
+    line-height: 25px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.titulog1 {
+  color: #464547;
+
+  font-family: PF Regal Display Pro;
+  font-size: 25px;
+  font-style: normal;
+  font-weight: 400px;
+  line-height: 45px; /* 180% */
+}
+
+.subtitulog1 {
+  color: #000;
+  font-family: PF Regal Display Pro;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 500px;
+  line-height: 45px; /* 112.5% */
+  letter-spacing: -0.4px;}
