--- a/terminal/CSS/global.css
+++ b/terminal/CSS/global.css
@@ -12,6 +12,11 @@
     width: 100vw;
   }
   
+  #contenedor, #contenedor2, #propiedades, #contenedor3 {
+    margin: 50px 50px 100px 50px;
+  }
+
+  
   header nav {
     position: fixed;
     display: flex;
@@ -67,25 +72,33 @@
 
   .luxury {
     color: #B4B7B7;
-
-font-family: PF Regal Display Pro;
-font-size: 40px;
-font-style: normal;
-font-weight: 400px;
-line-height: 45px;
-margin-top: 300px;
-margin-left: 90px;
-
+    font-family: PF Regal Display Pro;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 400px;
+    line-height: 45px;
+    margin-top: 300px;
+    margin-left: 90px;
 }
   #realestate{
   
-    font-family: 'PF Regal Display Pro';
-    font-style: normal;
-   font-weight: 500px;
-   font-size: 60px;
-   color: #FFFFFF;
-   margin-left: 90px;
+  font-family: 'PF Regal Display Pro';
+  font-style: normal;
+  font-weight: 500px;
+  font-size: 60px;
+  color: #FFFFFF;
+  margin-left: 90px;
   }
+  #follow {
+    position: fixed;
+    padding: 0;
+    display: grid;
+    grid-template-columns: 1fr;
+    z-index: 999998;
+    left: 1.3vw;
+    bottom: 2vw;
+    grid-gap: 5px;
+}
 
   #primer_boton {
    display: flex; 
@@ -131,7 +144,7 @@ margin-left: 90px;
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 980px;
+    height: 100vh;
   }
 
 #contenedor {
@@ -148,7 +161,7 @@ margin-left: 90px;
 }
 
 .galeria1{
-  max-height: 425px;
+  max-height: 350px;
 }
 
 .titulo {
@@ -188,12 +201,14 @@ line-height: 45px; /* 56.25% */
   color: #000;
   text-align: center;
   font-family: Brandon Grotesque;
-  font-size: 30px;
+  font-size: 15px;
+  padding: 3px;
   font-style: normal;
   font-weight: 390;
   line-height: 45px; /* 150% */
   border-radius: 100px;
   border: 1px solid rgb(24, 23, 23);
+  
 }
 
 #botongaleria {
@@ -204,6 +219,7 @@ line-height: 45px; /* 56.25% */
   margin-top: 150px;
   margin-left: 25%;
   margin-right: 25%;
+ 
   
 }
 
@@ -252,7 +268,7 @@ line-height: 45px; /* 225% */
 }
 
 .galeria2{
-  max-height: 425px;
+  max-height: 325px;
 }
 .titulo2 {
   display: flex;
@@ -273,18 +289,20 @@ line-height: 45px; /* 225% */
   
   .subtitulo2 {
     display: flex;
-  width: 776px;
-  height: 99px;
-  flex-direction: column;
-  justify-content: center;
-  flex-shrink: 0;
-  color: #000;
-
-  font-family: PF Regal Display Pro;
-  font-size: 80px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 45px; /* 56.25% */
+    width: 776px;
+    height: 99px;
+    flex-direction: column;
+    justify-content: center;
+    flex-shrink: 0;
+    color: #000;
+    
+    text-align: left;
+    font-family: PF Regal Display Pro;
+    font-size: 80px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 45px; /* 56.25% */
+   
   }
   .contenido {
     width: 689px;
@@ -301,7 +319,8 @@ line-height: 45px; /* 225% */
     color: #000;
     text-align: center;
     font-family: Brandon Grotesque;
-    font-size: 30px;
+    font-size: 15px;
+    padding: 3px;
     font-style: normal;
     font-weight: 390;
     line-height: 45px; /* 150% */
@@ -348,7 +367,9 @@ line-height: 45px; /* 225% */
     font-style: normal;
     font-weight: 390;
     line-height: 45px; /* 225% */
+    margin: 0 15px;
   }
+
   div#galeriafotos3 {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -370,7 +391,41 @@ line-height: 45px; /* 225% */
     overflow-clip-margin: content-box;
     overflow: clip;
   }
-.titulog1, .subtitulo2{
+
+  .titulo3 {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center;
+    flex-shrink: 0;
+    text-align: center;
+    color: #DF991B;
+  
+    font-family: PF Regal Display Pro;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 50px; /* 112.5% */
+    margin: 50px 0 0 0;
+    }
+    
+    .subtitulo3 {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      flex-shrink: 0;
+      color: #000;
+      text-align: center;
+      font-family: PF Regal Display Pro;
+      font-size: 80px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 56px; /* 56.25% */
+      margin: 0 0 50px;
+      
+     
+    }
+
+.titulog1, .subtitulog1 {
   font-family: 'PF Regal Display Pro';
     font-style: normal;
     font-weight: 400px;
@@ -382,12 +437,6 @@ line-height: 45px; /* 225% */
 }
 .titulog1 {
   color: #464547;
-
-  font-family: PF Regal Display Pro;
-  font-size: 25px;
-  font-style: normal;
-  font-weight: 400px;
-  line-height: 45px; /* 180% */
 }
 
 .subtitulog1 {
@@ -397,4 +446,170 @@ line-height: 45px; /* 225% */
   font-style: normal;
   font-weight: 500px;
   line-height: 45px; /* 112.5% */
-  letter-spacing: -0.4px;}
+  letter-spacing: -0.4px;
+}
+
+.titulo4 {
+  display: flex;
+  width: 490px;
+  height: 47px;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
+  text-align: left;
+  color: #DF991B;
+
+  font-family: PF Regal Display Pro;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 45px; /* 112.5% */
+  margin: 0 0 10px 10px;
+  }
+  
+  .subtitulo4 {
+    display: flex;
+    width: 776px;
+    height: 99px;
+    flex-direction: column;
+    justify-content: center;
+    flex-shrink: 0;
+    color: #000;
+    
+    text-align: left;
+    font-family: PF Regal Display Pro;
+    font-size: 80px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 56px; /* 56.25% */
+    margin: 10px 0 30px;
+ 
+   
+  }
+  .contenido1 {
+    width: 689px;
+  height: 184px;
+  flex-shrink: 0;
+  color: #000;
+  font-family: Brandon Grotesque;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 330;
+  line-height: 45px; /* 150% */
+  }
+  #contenedor3 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 3%;
+
+  }
+
+  .galeria4{
+
+    max-width: 800px;
+   
+}
+
+
+.galeria5 {
+
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+  margin: 10px 10px 20px 20px;
+}
+
+
+footer {
+  background-color: black;
+  width: 100%;
+  display: grid;
+  justify-content: center;
+  position: relative;
+}
+
+.news {
+  background-color: rgb(39, 39, 39);
+  display: flex;
+  gap: 50%;
+  padding: 16px 50px;
+  transform: translate(0, -50%);
+}
+
+.news span {
+  color: orange;
+  font-size: 20px;
+}
+
+.news p {
+  color: white;
+  font-size: 32px;
+}
+
+.footer-form {
+  display: grid;
+  gap: 8px;
+}
+
+.footer-form input {
+  background-color: transparent;
+  border: solid 2px grey;
+  border-radius: 20px;
+  padding: 6px 16px;
+  width: 100%;
+ 
+}
+
+.footer-form button {
+  background-color: transparent;
+  border: solid 2px orange;
+  border-radius: 20px;
+  padding: 6px 32px;
+  width: fit-content;
+  color: orange;
+  justify-self: end;
+
+}
+
+.info {
+  display: grid;
+  gap: 16px;
+  color: white;
+}
+
+.footer-bar {
+  width: 100%;
+  height: 3px;
+  background-color: white;
+}
+
+.copyright {
+  text-align: center;
+  margin-bottom: 16px;
+}
+
+.footer-text {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 100px;
+}
+
+.logofo{
+  width: 60px;
+  height: auto;
+}
+#contacto {
+  text-align: end;
+  justify-self: end;
+}
+main {
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
+  object-position: top -300px right 0;
+  overflow-x: hidden;
+}
+
+
