--- a/terminal/CSS/global.css
+++ b/terminal/CSS/global.css
@@ -270,6 +270,72 @@ line-height: 45px; /* 225% */
 .galeria2{
   max-height: 325px;
 }
+
+.galeriafot1 span {
+  display: grid;
+  grid-template-rows: 1fr;
+  align-items: end;
+  text-align: left;
+  background-color: rgba(246, 239, 239, 0.636);
+}
+.tituloimg, .subtituloimg {
+  display: grid;
+  grid-template-rows: 1fr;
+  align-items: end;
+  text-align: left;
+  background-color: rgba(246, 239, 239, 0.636);
+  position: relative;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  cursor: pointer;
+ 
+}
+
+.tituloimg:hover, .subtituloimg:hover {
+  opacity: 1;
+
+}
+
+.tituloimg {
+  display: flex;
+  width: 100%;
+  height: fit-content;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
+  color: #292727;
+  
+  font-family: PF Regal Display Pro;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 45px; /* 150% */
+}
+
+.subtituloimg {
+
+  display: flex;
+  width: 100%;
+  height:fit-content;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
+  color: #282525;
+  
+  font-family: PF Regal Display Pro;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 45px; /* 112.5% */
+}
+
+
+
+
+
+
+
+
 .titulo2 {
   display: flex;
   width: 490px;
@@ -388,9 +454,15 @@ line-height: 45px; /* 225% */
     width: 300px;
     text-decoration: none;
     transition: all 0.5s ease;
-    overflow-clip-margin: content-box;
-    overflow: clip;
+    overflow: hidden;
+    transition: transform 0.3s ease-in-out;
   }
+
+  .galeria3:hover {
+
+    transform: translateY(-20px)
+
+  } 
 
   .titulo3 {
     display: flex;
@@ -521,6 +593,10 @@ line-height: 45px; /* 225% */
   margin: 10px 10px 20px 20px;
 }
 
+.linea3 {
+  margin: 0 30px;
+
+}
 
 footer {
   background-color: black;
