--- a/terminal/CSS/main.css
+++ b/terminal/CSS/main.css
@@ -31,6 +31,7 @@
 
   .footer-text, #contacto, .news {
     display: grid;
+    width: 100vh;
     grid-template-columns: 1fr;
     justify-content: center;
     gap: 0%;
@@ -51,7 +52,7 @@
   }
   footer {
     background-color: black;
-    width: 100%;
+    width: 100vh;
     display: grid;
     justify-content: center;
     position: absolute;
