--- a/terminal/CSS/main.css
+++ b/terminal/CSS/main.css
@@ -96,7 +96,7 @@
     #contenedor {
       display: grid;
       grid-template-columns: 1fr 1fr;
-      
+      place-items: initial;
   }
   
   #galerizfotos {
@@ -157,7 +157,10 @@
   #contenedor2 {
     display: grid;
       grid-template-columns: 1fr 1fr;
+     place-items: initial;
   }
+
+
   #galeriafotos2 {
     grid-column: 1/3;
     width: 100vh;
@@ -174,30 +177,7 @@
     justify-content: right;
 
   }
-  .galeriafot1 span {
-    display: grid;
-    grid-template-rows: 1fr;
-    align-items: end;
-    text-align: left;
-    background-color: rgba(251, 245, 245, 0.636);
-  }
-  .tituloimg, .subtituloimg {
-    display: grid;
-    grid-template-rows: 1fr;
-    align-items: end;
-    text-align: left;
-    background-color: rgba(133, 127, 127, 0.636);
-    position: relative;
-    opacity: 0;
-    transition: opacity 0.3s ease-in-out;
-    cursor: pointer;
-   
-  }
-  
-  .tituloimg:hover, .subtituloimg:hover {
-    opacity: 1;
-  
-  }
+ 
   .tituloimg {
     display: flex;
     width: 100%;
@@ -243,31 +223,32 @@
 
   }
   .galeria3 {
-    width: 320px;
+    width: 100%;
     text-decoration: none;
     transition: all 0.5s ease;
     overflow: hidden;
     transition: transform 0.3s ease-in-out;
+   
   }
   #contenedor3 {
     display: grid;
     grid-template-columns: 1fr;
-    column-gap: 3%;
-    margin: 0 0 200px 0;
-
+    column-gap: 3%; 
   }
 
-  .galeria4{
-
-    max-width: 800px;
-   
-}
 
   .galeria4{
-
-    max-width: 60vh;
-   
+    max-width: 100vh;
 }
 
+#galeria4 {
+  order:2;
+  justify-content: center;
+  margin: 5% 0 20% 0;
+}
+#galeriaizq2 {
+   order:1;
+   justify-content: center;
+}
 
 }
