--- a/terminal/CSS/main.css
+++ b/terminal/CSS/main.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 1092px) {
     #logo {
       display: none;
     }
@@ -23,17 +23,11 @@
       margin-left: 5%;
   }
 
-  main 
-  {
-   width: 100vh;
-
-  }
-
+  
 
 
   .footer-text, #contacto, .news {
     display: grid;
-    width: 100vh;
     grid-template-columns: 1fr;
     justify-content: center;
     gap: 0%;
@@ -54,7 +48,7 @@
   }
   footer {
     background-color: black;
-    width: 100vh;
+   
     display: grid;
     justify-content: center;
     position: absolute;
@@ -107,6 +101,7 @@
     margin: 7% 5% 0 0;
     background-position: left;
     direction: rtl;
+    height: auto;
   }
   
 .titulo, .titulo2,.titulo3, .titulo4 {
@@ -243,8 +238,13 @@
 
 
   .galeria4{
-    max-width: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 100%;
+    max-height: 100%;
 }
+
 
 #galeria4 {
   order:2;
@@ -255,5 +255,277 @@
    order:1;
    justify-content: center;
 }
+
+}
+@media screen and (max-width: 825px) {
+  #logo {
+    display: none;
+  }
+  #mobile {
+    display: block;
+  }
+
+  .login {
+    display: none;
+  }
+  .menu a,
+  .menu div {
+    display: none;
+  }
+
+  #contenedor, #contenedor2, #propiedades, #contenedor3 {
+    margin: 0;
+  }
+
+  .luxury {
+    margin-top: 3px;
+    margin-left: 5%;
+}
+
+
+
+
+.footer-text, #contacto, .news {
+  display: grid;
+  grid-template-columns: 1fr;
+  justify-content: center;
+  gap: 0%;
+  text-align: center;
+  justify-self: center;
+  margin-bottom: 0;
+}
+.copyright {
+  text-align: center;
+  margin-bottom: 0;
+}
+.footer-bar {
+  width: 100%;
+  height: 3px;
+  background-color: white;
+  
+
+}
+footer {
+  background-color: black;
+ 
+  display: grid;
+  justify-content: center;
+  position: absolute;
+}
+
+.footer-form {
+  display: grid;
+  text-align: center;
+  justify-self: center;
+}
+.footer-form button {
+  
+  justify-self: center;
+
+}
+
+  #realestate{
+  margin-left: 5%;
+  }
+  #primer_boton { 
+   width: 100%;
+   margin: 0.5% 2% 0.5% 2%;
+ }
+ #buscar {
+  
+  width: 100%;
+  margin-right: 89%;
+  margin-top: 20%;
+  margin-left: 0.5%;
+}
+input#buscar::placeholder{
+  color: white;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;  
+  background-image: url(../IMG/lupa.png);  
+  background-repeat: no-repeat;
+  background-position: repeat;  
+  }
+
+  #contenedor {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    place-items: initial;
+}
+
+#galerizfotos {
+  grid-column: 1/3;
+  width: 100vh;
+  grid-row: 2/3;
+  margin-top: 7%;
+  margin: 7% 5% 0 0;
+  background-position: left;
+  direction: rtl;
+}
+
+.titulo, .titulo2,.titulo3, .titulo4 {
+
+width: 100vh;
+text-align: left;
+font-family: PF Regal Display Pro;
+font-size: 30px;
+line-height: 45px; /* 112.5% */
+}
+
+.titulo3 {
+  text-align: right;
+  font-family: PF Regal Display Pro;
+  font-size: 30px;
+  line-height: 45px; /* 112.5% */
+  width: fit-content;
+  }
+
+.subtitulo, .subtitulo2,.subtitulo3, .subtitulo4 {
+  text-align: left;
+  font-family: PF Regal Display Pro;
+  font-size: 40px;
+  margin-bottom: 5px;
+}
+
+.subtitulo::after{
+  content: "In an ultimate jetsetter location or a forever home, our experts have the expertise it takes to knowledgeably advise you at every stage of the property cycle.";
+  width: 100vh;
+  font-size: 20px;
+  line-height: 20px;
+  justify-content: right;
+
+}
+
+#botongaleria, #botongaleria1, #botongaleria4 {
+
+  display: flex;
+ margin: 45px 60% 0 0;
+ justify-content: space-between;
+}
+.primer_boton1, .primer_boton2, .primer_boton3 {
+  width: 100%;
+  margin: 0.5% 2% 0.5% 2%;
+}
+
+#contenedor2 {
+  display: grid;
+    grid-template-columns: 1fr 1fr;
+   place-items: initial;
+}
+
+
+#galeriafotos2 {
+  grid-column: 1/3;
+  width: 100vh;
+  grid-row: 2/3;
+  margin-top: 7%;
+  margin: 7% 5% 0 0;
+  background-position: left;
+  direction: ltr;
+}
+.contenido, .contenido1 {
+  justify-content: right;
+
+}
+.contenido {
+  font-size: 20px;
+  line-height: 40px;
+}
+
+.contenido1 {
+  width: 100vh;
+  font-size: 15px;
+  line-height: 40px;
+}
+
+.tituloimg {
+  display: flex;
+  width: 100%;
+  height: fit-content;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
+  color: #292727;
+  
+  font-family: PF Regal Display Pro;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 45px; /* 150% */
+}
+
+.subtituloimg {
+
+  display: flex;
+  width: 100%;
+  height:fit-content;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
+  color: #282525;
+  
+  font-family: PF Regal Display Pro;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 45px; /* 112.5% */
+}
+
+div#galeriafotos3 {
+  display: grid;
+  grid-template-columns: 1fr;
+  margin: 0 5% 0 5%;
+  column-gap: 5px;
+  row-gap: 25px;
+  overflow: hidden;
+  object-fit: cover;
+
+
+}
+.galeria3 {
+  width: 100%;
+  text-decoration: none;
+  transition: all 0.5s ease;
+  overflow: hidden;
+  transition: transform 0.3s ease-in-out;
+ 
+}
+#contenedor3 {
+  display: grid;
+  grid-template-columns: 1fr;
+  column-gap: 3%; 
+}
+
+
+.galeria4{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 520px;
+
+}
+
+#galeriaizq2 {
+ order:1;
+ justify-content: center;
+}
+.next4 {
+  margin-left: 0%;
+}
+ #botongaleria4 {
+
+  display: flex;
+ margin: 45px 70% 0 0;
+ justify-content: space-between;
+}
+
+}
+@media screen and (max-width: 500px) {
+  .galeria4{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 320px;
+  
+  }
 
 }
