--- a/terminal/CSS/main.css
+++ b/terminal/CSS/main.css
@@ -93,7 +93,7 @@
       place-items: initial;
   }
   
-  #galerizfotos {
+  /*#galerizfotos {
     grid-column: 1/3;
     width: 100vh;
     grid-row: 2/3;
@@ -102,7 +102,7 @@
     background-position: left;
     direction: rtl;
     height: auto;
-  }
+  }*/
   
 .titulo, .titulo2,.titulo3, .titulo4 {
 
@@ -126,6 +126,7 @@
     font-family: PF Regal Display Pro;
     font-size: 40px;
     margin-bottom: 5px;
+    width: auto;
   }
  
   .subtitulo::after{
@@ -152,11 +153,11 @@
   #contenedor2 {
     display: grid;
       grid-template-columns: 1fr 1fr;
-     place-items: initial;
+    
   }
 
 
-  #galeriafotos2 {
+ /* #galeriafotos2 {
     grid-column: 1/3;
     width: 100vh;
     grid-row: 2/3;
@@ -164,7 +165,7 @@
     margin: 7% 5% 0 0;
     background-position: left;
     direction: ltr;
-  }
+  }*/
   .contenido, .contenido1 {
     justify-content: right;
 
@@ -224,6 +225,7 @@
   }
   .galeria3 {
     width: 100%;
+    height: 600px;
     text-decoration: none;
     transition: all 0.5s ease;
     overflow: hidden;
@@ -398,7 +400,6 @@ line-height: 45px; /* 112.5% */
 #botongaleria, #botongaleria1, #botongaleria4 {
 
   display: flex;
- margin: 45px 60% 0 0;
  justify-content: space-between;
 }
 .primer_boton1, .primer_boton2, .primer_boton3 {
@@ -483,6 +484,7 @@ div#galeriafotos3 {
 }
 .galeria3 {
   width: 100%;
+  height: 300px;
   text-decoration: none;
   transition: all 0.5s ease;
   overflow: hidden;
